--- a/pom.xml
+++ b/pom.xml
@@ -264,6 +264,12 @@ under the License.
 					<scope>compile</scope>
 				</dependency>
 				<dependency>
+					<groupId>org.apache.flink</groupId>
+					<artifactId>flink-table-api-scala-bridge_${scala.binary.version}</artifactId>
+					<version>${flink.version}</version>
+					<scope>provided</scope>
+				</dependency>
+				<dependency>
 					<groupId>org.scala-lang</groupId>
 					<artifactId>scala-library</artifactId>
 					<version>${scala.version}</version>
