--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,12 @@ under the License.
 			<version>${flink.version}</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.github.haifengl</groupId>
+			<artifactId>smile-core</artifactId>
+			<version>2.6.0</version>
+		</dependency>
+
 		<!-- Example:
 
 		<dependency>
